--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,7 +38,7 @@ p{
 }
 
 .container{
-    color:white;;
+    color:black;;
     text-align: center;
 }
 
@@ -83,11 +83,17 @@ nav ul li a:hover{
     color: white
 }
 
-.background2{
-    background-image: url("../IMAGES/");
-    height: 100%;
+
+
+.form{
+    margin-top: 200px;
+
 }
 
-#form{
-    margin-top: 100px;
+.ORDER{
+    color: black;
+}
+
+.pizzaSize{
+    color: black;
 }
